--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   postgres:
@@ -34,6 +33,8 @@ services:
     build: .
     volumes:
       - ./:/myapp/
+    ports:
+      - "8000:8000"
     depends_on:
       postgres:
         condition: service_healthy
