--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - DATABASE_URL: postgresql://user:password@postgres:5432/myappdb
       - kafka_bootstrap_servers: "kafka:9092"
       - kafka_email_topic: "email-topic"
     depends_on:
